Added user model and actions to swagger file
