# python-flask-server/swagger_server/models/__init__.py
@@ -5,7 +5,11 @@ from __future__ import absolute_import
 # import models into model package
 from swagger_server.models.ask import Ask
 from swagger_server.models.bid import Bid
-from swagger_server.models.error_model import ErrorModel
+from swagger_server.models.inline_response200 import InlineResponse200
 from swagger_server.models.investor import Investor
+from swagger_server.models.login_user import LoginUser
 from swagger_server.models.new_ask import NewAsk
 from swagger_server.models.new_bid import NewBid
+from swagger_server.models.new_user import NewUser
+from swagger_server.models.unexpected_error import UnexpectedError
+from swagger_server.models.user import User
