# python-flask-server/swagger_server/models/inline_response200.py
@@ -1,0 +1,66 @@
+# coding: utf-8
+
+from __future__ import absolute_import
+from datetime import date, datetime  # noqa: F401
+
+from typing import List, Dict  # noqa: F401
+
+from swagger_server.models.base_model_ import Model
+from swagger_server import util
+
+
+class InlineResponse200(Model):
+    """NOTE: This class is auto generated by the swagger code generator program.
+
+    Do not edit the class manually.
+    """
+
+    def __init__(self, sessionid: str='123456789012345678901234567890'):  # noqa: E501
+        """InlineResponse200 - a model defined in Swagger
+
+        :param sessionid: The sessionid of this InlineResponse200.  # noqa: E501
+        :type sessionid: str
+        """
+        self.swagger_types = {
+            'sessionid': str
+        }
+
+        self.attribute_map = {
+            'sessionid': 'sessionid'
+        }
+
+        self._sessionid = sessionid
+
+    @classmethod
+    def from_dict(cls, dikt) -> 'InlineResponse200':
+        """Returns the dict as a model
+
+        :param dikt: A dict.
+        :type: dict
+        :return: The inline_response_200 of this InlineResponse200.  # noqa: E501
+        :rtype: InlineResponse200
+        """
+        return util.deserialize_model(dikt, cls)
+
+    @property
+    def sessionid(self) -> str:
+        """Gets the sessionid of this InlineResponse200.
+
+        API or Session key.  # noqa: E501
+
+        :return: The sessionid of this InlineResponse200.
+        :rtype: str
+        """
+        return self._sessionid
+
+    @sessionid.setter
+    def sessionid(self, sessionid: str):
+        """Sets the sessionid of this InlineResponse200.
+
+        API or Session key.  # noqa: E501
+
+        :param sessionid: The sessionid of this InlineResponse200.
+        :type sessionid: str
+        """
+
+        self._sessionid = sessionid
